# SvgParser

./: .gitmodules  CMakeLists.txt
cmake/: CompileOptions.cmake
src/: CMakeLists.txt  context.cpp  context.h
src/Primitives/: abstractprimitive.h
tests/: CMakeLists.txt  context.cpp
